--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+
+<html>
+	<head>
+		<title>Amazon: product history</title>
+		<!-- <style>
+			div {
+				display: inline;
+			}
+		</style> -->
+		
+		<link href="./css/style.css" rel="stylesheet">
+		
+	</head>
+
+	<body>
+		<header>
+			<div class="logo">
+				<img src="./img/amazon-logo.PNG" />
+				<h1>Amazon</h1>
+			</div>
+			
+			<div class="cart">
+				<a href="https://google.com/">Cart</a>
+			</div>
+			<div class="clearfix"></div>
+		</header>
+		
+		
+		
+		<h2 id="page_heading">Order history</h2>
+		<h3 style="margin: 10px; padding: 10px; border: solid blue 10px;">Your previously ordered items:</h3>
+		<table border="1">
+			<tr>
+				<th>Product Name</th>
+				<th>Product price(INR)</th>
+				<th>Purchase date</th>
+			</tr>
+			<tr>
+				<td>Samsung M30</td>
+				<td>10000</td>
+				<td>30/Oct/2021</td>
+			</tr>
+			<tr>
+				<td>Logitech Mouse</td>
+				<td>1000</td>
+				<td>10/Oct/2021</td>
+			</tr>
+		</table>
+		
+		<footer>
+			<p>this is a footer description</p>
+		</footer>
+	</body>
+
+</html>
+
+
+
+
 
